# Image_fusion_opencv

./: CMakeLists.txt  README.md  main.cpp
include/: imagefusion.h
